# mlops_wrapper

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: publish-to-pypi.yml
examples/: cli.py  my_experiment.py
scripts/: publish_to_pypi.sh
src/mlops_wrapper/: __init__.py  mlflow_wrapper.py
tests/: test_catboost_autolog.py
