[project]
name = "mlops_wrapper"
version = "0.2.0"
description = "a unified mlflow wrapper for standardized ML model logging and registration."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "akaay", email = "s.a.ashok91@gmail.com" }
]
dependencies = [
    "mlflow>=2.9.0",  # allow mlflow 3.x
    "boto3>=1.28.0,<2.0.0"   # reasonable version pin
]

[project.urls]
Homepage = "https://github.com/Iyalvan/mlops_wrapper"
Issues = "https://github.com/Iyalvan/mlops_wrapper/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
